# yast-online-update

./: .cvsignore  .gitignore  .travis.yml  MAINTAINER  Makefile  Makefile.am  Makefile.in  README  README.md  README_skeleton  RPMNAME  SUBDIRS  VERSION  config.cache  config.status  configure  configure.in  y2c_online_update.spec.in  yast2-config-online-update.spec.in  yast2-online-update.spec.in
agent-you/: .cvsignore  Makefile.cvs  RPMNAME  configure.in  yast2-agent-you.spec.in
agent-you/conf/: Makefile.am  you.scr
agent-you/doc/: Makefile.am  you.html
agent-you/package/: y2a_you.changes  yast2-agent-you.changes
agent-you/src/: Makefile.am  PatchInfo.cc  PatchInfo.h  RpmDb.cc  RpmDb.h  Y2CCYou.cc  Y2CCYou.h  Y2YouComponent.cc  Y2YouComponent.h  YouAgent.cc  YouAgent.h  YouAgentCalls.cc  YouAgentCalls.h  YouAgentCalls2.cc
agent-you/testsuite/: .cvsignore  Makefile.am
agents/: Makefile.am
conf/: cfg_apache_youserver.scr  cfg_onlineupdate.scr  cfg_you.scr  etc_suseservers.scr  you_config.scr  you_password.scr
doc/: Makefile  Makefile.am  Makefile.in  business_you.txt  business_you_intern.txt  maintaince_meeting_SLES8  online_update.txt  patch-description-8.1  patch-description-spec-8.1  y2c_online_update.html
online-update/: yast2-online-update.spec.in
online-update/conf/: cfg_onlineupdate.scr
online-update/doc/: Makefile.am  README_patch  business_you.txt  online_update.txt  patch-description-spec-8.1  y2c_online_update.html
online-update/package/: yast2-online-update.changes
online-update/src/: AutoOnlineUpdate.ycp  Makefile.am  OnlineUpdate.ycp  OnlineUpdateDialogs.ycp  cd_update.desktop  inst_you.ycp  online_update.ycp  online_update_select.ycp  online_update_setup.desktop  online_update_start.ycp
online-update/testsuite/tests/: read_servers.ycp  write_servers.ycp
package/: y2c_online_update.changes  y2c_online_update.spec  yast2-config-online-update.changes  yast2-online-update.changes  yast2-online-update.spec
src/: AutoOnlineUpdate.ycp  Makefile  Makefile.am  Makefile.in  OnlineUpdate.ycp  OnlineUpdateCallbacks.ycp  OnlineUpdateDialogs.ycp  cd_update.desktop  cd_update.y2cc  cd_update.ycp  do_online_update_auto.ycp  ftp_server.ycp  inst_you.ycp  menuentry_cd_update.y2cc  menuentry_cd_update.ycp  menuentry_online_update.ycp  online_update.desktop  online_update.y2cc  online_update.ycp  online_update_auto.ycp  online_update_close.ycp  online_update_connect.ycp  online_update_details.ycp  online_update_dialogs.ycp  online_update_install.ycp  online_update_load.ycp  online_update_select.ycp  online_update_setup.desktop  online_update_setup.ycp  online_update_start.ycp  suseservers  suseservers.ycp  sysconfig.onlineupdate  sysconfig.you  you_server.ycp
src/clients/: cd_update.rb  cd_update.ycp  do_online_update_auto.rb  inst_you.rb  online_update.rb  online_update.ycp  online_update_install.rb  online_update_select.rb
src/desktop/: online_update.desktop  org.opensuse.yast.OnlineUpdate.desktop
src/include/: Makefile.am  suseservers.ycp
src/modules/: OnlineUpdate.rb  OnlineUpdateCallbacks.rb  OnlineUpdateDialogs.rb
test/: Makefile.am  online_update_dialogs_test.rb
testsuite/tests/: suseservers
