# Sources for online-update

module_DATA = \
  modules/OnlineUpdateCallbacks.rb \
  modules/OnlineUpdateDialogs.rb \
  modules/OnlineUpdate.rb

client_DATA = \
  clients/inst_you.rb \
  clients/online_update.rb \
  clients/do_online_update_auto.rb \
  clients/online_update_select.rb \
  clients/online_update_install.rb \
  clients/cd_update.rb

desktop_DATA = \
  desktop/online_update.desktop

EXTRA_DIST = $(module_DATA) $(client_DATA) $(desktop_DATA)

include $(top_srcdir)/Makefile.am.common